[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/HalaOS/RINQ.git"
version = "0.1.0"

[workspace.dependencies]
log = { version = "^0.4" }
pretty_env_logger = "^0.5"
clap = "^4.5"
async-trait = "^0.1"
thiserror = "^1.0"
bigdecimal = "^0.4"
#RASI
rasi = "^0.1"
