[package]
description = "A sql parser implemented by nom for rinq framework"
documentation = "https://docs.rs/rinq-sql"
edition.workspace = true
license = "MIT"
name = "rinq-sql"
repository.workspace = true
version.workspace = true
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom = "7.1.3"
