[package]
description = "RINQ sqlite backend"
documentation = "https://docs.rs/rinq-sqlite"
edition.workspace = true
license = "MIT"
name = "rinq-sqlite"
repository.workspace = true
version.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
