[package]
description = "RINQ sqlite backend"
documentation = "https://docs.rs/rinq-sqlite"
edition.workspace = true
license = "MIT"
name = "rinq-sqlite"
repository.workspace = true
version.workspace = true
readme = "README.md"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sqlite3-sys = { workspace = true }
rinq-rdbc = { workspace = true }
rasi = { workspace = true }
